# TicTacToRec

./: .gitignore  .gitmodules  01.ttt  CMakeLists.txt  LICENCE.md  Makefile  README.md  TODO.org  imgui.ini  main  main.cpp  runebuilder  save_state.ttt  tru.ttt
TTT/: GameState.cpp  Grid.cpp  Grid.h
src/: CMakeLists.txt  imgui.ini  main.cpp
src/Grid/: GameModeManager.cpp  GameState.cpp  GameState.hpp  GridLogic.hpp  GridView.hpp  ModeState.hpp  TTT_GridLogic.cpp  TTT_GridLogic.hpp
src/Grid/Rune/: R_Logic.hpp  R_State.hpp  R_View.hpp
src/Grid/TTT/: TTT_Bot.cpp  TTT_Bot.hpp  TTT_GameModeManager.cpp  TTT_GameModeManager.hpp  TTT_GameState.cpp  TTT_GameState.hpp  TTT_GameStateVariant.cpp  TTT_GameStateVariant.hpp  TTT_GridLogic.cpp  TTT_GridLogic.hpp  TTT_GridView.hpp  TTT_MonteCarlo.cpp  TTT_MonteCarlo.hpp
src/TTT/: GameModeManager.cpp  GameModeManager.hpp  GameState.cpp  GameState.h  GameState.hpp  Grid.cpp  Grid.h  GridLogic.cpp  GridLogic.hpp  GridView.hpp  MonteCarloBot.cpp  MonteCarloBot.hpp
src/UI/: TTT_setup_interface.h  TTT_setup_shortcut.h  config.h  emacsStyleShortCut.hpp  functor.hpp
src/utils/: Command.h  R_setup_interface.h  R_setup_shortcut.h  TTT_setup_interface.h  TTT_setup_shortcut.h  config.h  emacsStyleShortCut.hpp  functor.hpp  setup_interface.h  setup_shortcut.h  shortcut_editor.h
tests/: CMakeLists.txt  GridLogic.cpp  Interface.cpp
